// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View renders a document view 1`] = `
<div
  id="view"
>
  <div
    id="DocumentView"
  />
  <div
    id="SocialSharing"
  />
  <div
    id="Portal"
  />
</div>
`;

exports[`View renders a summary view 1`] = `
<div
  id="view"
>
  <div
    id="SummaryView"
  />
  <div
    id="SocialSharing"
  />
  <div
    id="Portal"
  />
</div>
`;

exports[`View renders a tabular view 1`] = `
<div
  id="view"
>
  <div
    id="TabularView"
  />
  <div
    id="SocialSharing"
  />
  <div
    id="Portal"
  />
</div>
`;

exports[`View renders an empty view 1`] = `<span />`;
